targeting-service/k8s/deployment-targeting.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting
  labels:
    app: targeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: targeting-service:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8003

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 20
