targeting-service/k8s/service-targeting.yml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting
spec:
  selector:
    app: targeting-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
