targeting-service/k8s/ingress-targeting.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-ingress
  namespace: targeting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.fiap.local
      http:
        paths:
          - path: /targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 80
